--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
 
                     <ul class="rslides" id="slider1">
-                        <li><img src="img/1.jpg" alt=""></li>
-                        <li><img src="img/2.jpg" alt=""></li>
-                        <li><img src="img/3.jpg" alt=""></li>
-                        <li><img src="img/4.jpg" alt=""></li>
+                        <li><img src="img/1.JPG" alt=""></li>
+                        <li><img src="img/2.JPG" alt=""></li>
+                        <li><img src="img/3.JPG" alt=""></li>
+                        <li><img src="img/4.JPG" alt=""></li>
                     </ul>
 
                 </div>
