--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 <div class="col-lg-6">
                     <p>Наш адрес: <br><br>
                     Bahia 26 <br>17487, Empuriabrava<br> Girona, Espania <br><br>
-                    info@lavidasinlimites.com</p>
+                    hola@lavidasinlimites.com</p>
                 </div>
             </div>
 
