--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Реабилитационный центр">
+    <meta name="author" content="LaVidaSinLimites">
+    <meta name="keywords" content="Центр, Реабилитационный центр, Отдых, Отдых в испании, Отдых в Испании для инвалидов, Отдых в Испании для пожилых людей, Отдых в Испании для лиц с ограниченными возможностями, Отдых в Испании на берегу,  
+    Отдых для инвалидов, Отдых для пожилых людей, Отдых для лиц с ограниченными возможностями, Отдых на берегу, Аппартаменты, Аппартаменты в Испании">
 
     <title>Реабилитационный центр - Жизнь без границ</title>
 
@@ -173,7 +175,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Просторные номера</h2>
-                    <p class="lead">Средняя площадь каждого номера - 60м<sup>2</sup> Каждый номер оборудован кухней</p>
+                    <p class="lead">В вашем распоряжении будет комфотный номер с оборудованной кухней, просторной ванной комнатой и террасой откуда открывается потрясающий вид на море. Средняя площадь каждого номера - 60м<sup>2</sup> </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                    
