--- a/index.html
+++ b/index.html
@@ -188,17 +188,12 @@
     </div>
     <!-- /.content-section-a -->
 
-    <div id="contacts" class="banner">
+    <div id="contacts">
 
-        <div class="container">
+        <div class="container-fluid">
 
             <div class="row">
-                <div class="col-lg-6">
-
-                </div>
-                <div class="col-lg-6">
-                    <p><br><br><br><br><br><br></p>
-                </div>
+                <img src="img/map.png" style="width:100%;height:100%">
             </div>
 
         </div>
