--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <div class="container-fluid">
 
             <div class="row">
-                <img src="img/map.png" style="width:100%;height:100%">
+                <img src="img/map3.png" style="width:100%">
             </div>
 
         </div>
