--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
                     <h2 class="section-heading">Просторные номера</h2>
                     <p class="lead">В вашем распоряжении будет комфотный номер с оборудованной кухней, просторной ванной комнатой и террасой, откуда открывается потрясающий вид на море. Средняя площадь каждого номера - 60м<sup>2</sup> </p>
                 </div>
-               <!-- <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <form method="post" enctype="text/plain">
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                    <!--<form method="post" enctype="text/plain">
   
                             
                         <div class="form-group">
