--- a/index.html
+++ b/index.html
@@ -231,14 +231,14 @@
                             </div>
                         </div>
                         <button type="submit" class="btn btn-default">Забронировать</button>
-                    </form>
+                    </form>-->
                 </div>
             </div>
 
-        </div> -->
+        </div>
         <!-- /.container -->
 
-    <!--</div>-->
+    </div>
     <!-- /.content-section-a -->
 
 
