--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     <p class="lead">В вашем распоряжении будет комфотный номер с оборудованной кухней, просторной ванной комнатой и террасой, откуда открывается потрясающий вид на море. Средняя площадь каждого номера - 60м<sup>2</sup> </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <!--<form method="post" enctype="text/plain">
+                    <form method="post" action="bookingtest.php">
   
                             
                         <div class="form-group">
@@ -227,11 +227,11 @@
                         <div class="form-inline" style="margin-top:15px; margin-bottom:10px;">
                             <div class="form-group">
                                 <label for="guests">Количество гостей</label>
-                                <input type="number" class="form-control" id="number" style="width:67px;margin-left:3px;">                         
+                                <input type="number" class="form-control" id="guests" style="width:67px;margin-left:3px;">                         
                             </div>
                         </div>
-                        <button type="submit" class="btn btn-default">Забронировать</button>
-                    </form>-->
+                        <button type="submit" name="book" class="btn btn-default">Забронировать</button>
+                    </form>
                 </div>
             </div>
 
