--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     <p class="lead">В вашем распоряжении будет комфотный номер с оборудованной кухней, просторной ванной комнатой и террасой, откуда открывается потрясающий вид на море. Средняя площадь каждого номера - 60м<sup>2</sup> </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <form method="post" action="bookingtest.php">
+                    <!--<form method="post" action="bookingtest.php">
   
                             
                         <div class="form-group">
@@ -231,7 +231,7 @@
                             </div>
                         </div>
                         <button type="submit" name="book" class="btn btn-default">Забронировать</button>
-                    </form>
+                    </form>-->
                 </div>
             </div>
 
