--- a/index.html
+++ b/index.html
@@ -240,12 +240,12 @@
                             </tr>
                         </thead>
                         <tr class="warning">
-                            <td>Низкий <br> (1/11 -24/12) (10/01 - 15/05)</td>
+                            <td>Низкий <br> (1/11 -24/12, 10/01 - 15/05)</td>
                             <td>80 Евро/Сутки</td>
                             <td>100 Евро/Сутки</td>
                         </tr>
                         <tr class="info">
-                            <td>Средний <br> (1/09 - 1/11) (24/12 - 10/01) (15/05 - 15/07)</td>
+                            <td>Средний <br> (1/09 - 1/11, 24/12 - 10/01, 15/05 - 15/07)</td>
                             <td>100 Евро/Сутки</td>
                             <td>120 Евро/Сутки</td>
                         </tr>
