--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Аппарт-центр на первой линии море</h2>
-                    <p class="lead">8 абсолютно новых аппартаментов, каждый из которых расчитан на 2-4 человека. Все аппартаменты состоят из спальни, просторной гостинной, просторной ванной комнаты, кухни, оборудованной плитой, микроволновой печью, посудомоичной машиной и террасой/патио, откуда открывается потрясающий вид на море. Площадь номеров  50 м<sup>2</sup> - 60м<sup>2</sup> </p>
+                    <p class="lead">8 абсолютно новых аппартаментов, каждый из которых расчитан на до 4 человек. Все аппартаменты состоят из спальни, просторной гостинной, просторной ванной комнаты, кухни, оборудованной плитой, холодильником, микроволновой печью, посудомоичной машиной и террасой/патио, откуда открывается потрясающий вид на море. Площадь номеров  50 м<sup>2</sup> - 60м<sup>2</sup> </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <hr class="section-heading-spacer">
