--- a/index.html
+++ b/index.html
@@ -114,6 +114,15 @@
         });
   </script>
 
+  <style>
+    .plan {
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+        width: 100%;
+    }
+  </style>
+
 </head>
 
 <body>
@@ -205,6 +214,7 @@
                         <li><img src="img/2.JPG" alt=""></li>
                         <li><img src="img/3.JPG" alt=""></li>
                         <li><img src="img/4.JPG" alt=""></li>
+                        <li><img src="img/5.JPG" alt=""></li>
                     </ul>
 
                 </div>
@@ -292,6 +302,11 @@
 
 
                 </div>
+
+                <div class="col-md-16">
+                    <img class="plan" src="img/plan.png" alt="">
+                </div>
+
             </div>
 
         </div>
