--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="LaVidaSinLimites">
     <meta name="keywords" content="Центр, Реабилитационный центр, Отдых, Отдых в испании, Отдых в Испании для инвалидов, Отдых в Испании для пожилых людей, Отдых в Испании для лиц с ограниченными возможностями, Отдых в Испании на берегу,  
     Отдых для инвалидов, Отдых для пожилых людей, Отдых для лиц с ограниченными возможностями, Отдых на берегу, Аппартаменты, Аппартаменты в Испании">
-    <link rel="icon" type="image/png" href="logo.png"/>
+    <link rel="icon" type="image/png" href="img/logo.png"/>
 
     <title>Реабилитационный центр - Жизнь без границ</title>
 
