--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta name="description" content="Реабилитационный центр">
     <meta name="author" content="LaVidaSinLimites">
     <meta name="keywords" content="Центр, Реабилитационный центр, Отдых, Отдых в испании, Отдых в Испании для инвалидов, Отдых в Испании для пожилых людей, Отдых в Испании для лиц с ограниченными возможностями, Отдых в Испании на берегу,  
-    Отдых для инвалидов, Отдых для пожилых людей, Отдых для лиц с ограниченными возможностями, Отдых на берегу, Аппартаменты, Аппартаменты в Испании">
+    Отдых для инвалидов, Отдых для пожилых людей, Отдых для лиц с ограниченными возможностями, Отдых на берегу, Аппартаменты, Аппартаменты в Испании, Апарт центр на первой линии моря, Апарт центр, Апарт отель">
     <link rel="icon" type="image/png" href="img/logo1.png"/>
 
-    <title>Реабилитационный центр - Жизнь без границ</title>
+    <title>Апарт центр на первой линии моря</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
