--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Апарт центр на первой линии моря">
     <meta name="author" content="LaVidaSinLimites">
-    <meta name="keywords" content="Центр, Реабилитационный центр, Отдых, Отдых в испании, Отдых в Испании для инвалидов, Отдых в Испании для пожилых людей, Отдых в Испании для лиц с ограниченными возможностями, Отдых в Испании на берегу,  
+    <meta name="keywords" content="lavidasinlimites, la vida sin limites, Центр, Реабилитационный центр, Отдых, Отдых в испании, Отдых в Испании для инвалидов, Отдых в Испании для пожилых людей, Отдых в Испании для лиц с ограниченными возможностями, Отдых в Испании на берегу,  
     Отдых для инвалидов, Отдых для пожилых людей, Отдых для лиц с ограниченными возможностями, Отдых на берегу, Аппартаменты, Аппартаменты в Испании, Апарт центр на первой линии моря, Апарт центр, Апарт отель">
+    <meta name='yandex-verification' content='6ded755f71dd7171' />
+
     <link rel="icon" type="image/png" href="img/logo1.png"/>
 
     <title>Апарт центр на первой линии моря</title>
