--- a/index.html
+++ b/index.html
@@ -26,10 +26,6 @@
     <link href="font-awesome-4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
-    <!-- Languages -->
-    <link href="css/russian.css" rel="stylesheet" type="text/css">
-    <link href="css/french.css" rel="alternate stylesheet" type="text/css" title="alternate">
-
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -173,46 +169,25 @@
                 <a class="navbar-brand" rel="home" href="#" title="La Vida Sin Limites">
                     <img style="max-width:100px; margin-top: -7px;" src="img/logo.png">
                 </a>
-
-                <p style="float:right;"><a href="javascript:chooseStyle('none', 60)">RU</a> <a href="javascript:chooseStyle('alternate', 60)"  style="border-left:2px solid #000;height:10px; padding-left:5px;">EN</a></p>
                 
                 <!--<a class="navbar-brand" href="#">Реабилитационный центр</a>-->
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right"> 
-                    <span class="russian">
-                        <li>
-                            <a href="#rest">Место</a>
-                        </li>
-                        <li>
-                            <a href="#rooms">Номера</a>
-                        </li>
-                        <li>
-                            <a href="#environment">Среда</a>
-                        </li>
-                        <li>
-                            <a href="#contacts">Контакты</a>
-                        </li>
-                    </span>
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="#rest">Место</a>
+                    </li>
+                    <li>
+                        <a href="#rooms">Номера</a>
+                    </li>
+                    <li>
+                        <a href="#environment">Среда</a>
+                    </li>
+                    <li>
+                        <a href="#contacts">Контакты</a>
+                    </li>
                 </ul>
-                <ul class="nav navbar-nav navbar-right"> 
-                    <span class="french">
-                        <li>
-                            <a href="#rest">Lieu</a>
-                        </li>
-                        <li>
-                            <a href="#rooms">Chambres</a>
-                        </li>
-                        <li>
-                            <a href="#environment">Accessibilité</a>
-                        </li>
-                        <li>
-                            <a href="#contacts">Сontacts</a>
-                        </li>
-                    </span>
-                </ul>
-
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -227,12 +202,10 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1><span class="russian">Жизнь без границ</span></h1>
-                        <h1><span class="french">La vie sans limites</span></h1>
+                        <h1>Жизнь без границ</h1>
                         <h3>La vida sin limites</h3>
                         <hr class="intro-divider">
-                        <h2 style="color:#EE3A39"><span class="russian">ОТКРЫТИЕ В МАЕ</span></h2>
-                        <h2 style="color:#EE3A39"><span class="french">OUVERTURE EN MAI</span></h2>
+                        <h2 style="color:#EE3A39">ОТКРЫТИЕ В МАЕ</h2>
                     </div>
                 </div>
             </div>
@@ -253,10 +226,8 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading"><span class="russian">Empuriabrava - уютное и красивое место для комфортного отдыха</span></h2>
-                     <h2 class="section-heading"><span class="french">Empuriabrava -C'est un endroit très confortable et beau pour un séjour</span></h2>
-                    <p class="lead"><span class="russian">Разнообразие видов спорта и развлечений для детей и молодежи. Тишина и комфорт для пожилых. Безопасность и стабильность для всей семьи!</span></p>
-                     <p class="lead"><span class="french">Une variété de sports et de divertissement pour les enfants et les jeunes. Silence et de confort pour les personnes âgées. La sécurité et la stabilité pour toute la famille!</span></p>
+                    <h2 class="section-heading">Empuriabrava - уютное и красивое место для комфортного отдыха</h2>
+                    <p class="lead">Разнообразие видов спорта и развлечений для детей и молодежи. Тишина и комфорт для пожилых. Безопасность и стабильность для всей семьи!</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6 linebreak">
                     <!--<hr class="section-heading-spacer">
@@ -284,71 +255,38 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading"><span class="russian">Апарт-центр на первой линии моря, до пляжа 100 метров!</span></h2>
-                    <h2 class="section-heading"><span class="french">L'appartement  est situé sur la première ligne de la mer, à 100 mètres de la plage!</span></h2>
-                    <p class="lead"><span class="russian">8 абсолютно новых апартаментов, каждый из которых расчитан на семью до 4 человек. Все апартаменты состоят из спальни, просторной гостиной, просторной ванной комнаты, кухни, оборудованной плитой, холодильником, микроволновой печью, посудомоечной машиной и террасой/патио, откуда открывается потрясающий вид на море. Площадь номеров  50 м<sup>2</sup> - 60м<sup>2</sup> </span></p>
-                     <p class="lead"><span class="french">8  nouveaux appartements, dont chacun est conçu pour une famille allant jusqu'à 4 personnes. Tous les appartements disposent d'une chambre, un salon spacieu,salle de bain spacieuse, cuisine équipée ,avec réfrigérateur, micro-ondes, lave-vaisselle  et une terrasse / patio avec une impressionnante vue sur la mer. Les pièces font 50 м<sup>2</sup> - 60м<sup>2</sup> </span></p>
+                    <h2 class="section-heading">Апарт-центр на первой линии моря, до пляжа 100 метров!</h2>
+                    <p class="lead">8 абсолютно новых апартаментов, каждый из которых расчитан на семью до 4 человек. Все апартаменты состоят из спальни, просторной гостиной, просторной ванной комнаты, кухни, оборудованной плитой, холодильником, микроволновой печью, посудомоечной машиной и террасой/патио, откуда открывается потрясающий вид на море. Площадь номеров  50 м<sup>2</sup> - 60м<sup>2</sup> </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6 linebreak">
                     <!--<hr class="section-heading-spacer">
                     <div class="clearfix"></div>-->
                     <table class="table table-hover">
-                        <span class="russian">
-                            <thead>
-                                <tr> 
-                                    <th>Сезон</th>
-                                    <th>Стандарт</th>
-                                    <th>Улучшенный</th>
-                                </tr>
-                            </thead>
-                            <tr class="warning">
-                                <td>Низкий <br> (1/11 -23/12, 10/01 - 15/05)</td>
-                                <td>80 Евро/Сутки</td>
-                                <td>100 Евро/Сутки</td>
+                        <thead>
+                            <tr>
+                                <th>Сезон</th>
+                                <th>Стандарт</th>
+                                <th>Улучшенный</th>
                             </tr>
-                            <tr class="info">
-                                <td>Средний <br> (1/09 - 31/10, 24/12 - 9/01, 16/05 - 15/07)</td>
-                                <td>100 Евро/Сутки</td>
-                                <td>120 Евро/Сутки</td>
-                            </tr>
-                            <tr class="success">
-                                <td>Высокий <br> (16/07 - 31/08)</td>
-                                <td>120 Евро/Сутки</td>
-                                <td>140 Евро/Сутки</td>
-                            </tr>
-                        </span>
-                    </table>
-                     <table class="table table-hover">
-                        <span class="french">
-                            <thead>
-                                <tr> 
-                                    <th>Saison</th>
-                                    <th>Standard</th>
-                                    <th>Amélioré</th>
-                                </tr>
-                            </thead>
-                            <tr class="warning">
-                                <td>Basse<br> (1/11 -23/12, 10/01 - 15/05)</td>
-                                <td>80 Euro/nuit</td>
-                                <td>100 Euro/nuit</td>
-                            </tr>
-                            <tr class="info">
-                                <td>Moyenne<br> (1/09 - 31/10, 24/12 - 9/01, 16/05 - 15/07)</td>
-                                <td>100 Euro/nuit</td>
-                                <td>120 Euro/nuit</td>
-                            </tr>
-                            <tr class="success">
-                                <td>Haute<br> (16/07 - 31/08)</td>
-                                <td>120 Euro/nuit</td>
-                                <td>140 Euro/nuit</td>
-                            </tr>
-                        </span>
+                        </thead>
+                        <tr class="warning">
+                            <td>Низкий <br> (1/11 -23/12, 10/01 - 15/05)</td>
+                            <td>80 Евро/Сутки</td>
+                            <td>100 Евро/Сутки</td>
+                        </tr>
+                        <tr class="info">
+                            <td>Средний <br> (1/09 - 31/10, 24/12 - 9/01, 16/05 - 15/07)</td>
+                            <td>100 Евро/Сутки</td>
+                            <td>120 Евро/Сутки</td>
+                        </tr>
+                        <tr class="success">
+                            <td>Высокий <br> (16/07 - 31/08)</td>
+                            <td>120 Евро/Сутки</td>
+                            <td>140 Евро/Сутки</td>
+                        </tr>
                     </table>
 
-                    <p><span class="russian">Заявку на бронирование номеров Вы можете прислать на электронную почту <a href="mailto:hola@lavidasinlimites.com" target="_blank">hola@lavidasinlimites.com</a></span></p>
-
-                    <p><span class="french">Demande de réservations vous pouvez envoyer un e-mail<a href="mailto:hola@lavidasinlimites.com" target="_blank">hola@lavidasinlimites.com</a></span></p>
-
+                    <p>Заявку на бронирование номеров Вы можете прислать на электронную почту <a href="mailto:hola@lavidasinlimites.com" target="_blank">hola@lavidasinlimites.com</a></p>
 
                     <a href="https://www.airbnb.ru/rooms/6280517" target="_blank"><img src="img/airbnb.png"/></a>
                     <a href="https://www.facebook.com/pages/La-Vida-Sin-Limites/1599616063656243" target="_blank"><img src="img/facebook.png" style="margin-left:10px;"/></a>
@@ -419,13 +357,10 @@
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading"><span class="russian">Доступная среда</span></h2>
-                    <h2 class="section-heading"><span class="french">Environnement accessible</span></h2>
-                    
-                    <p class="lead"><span class="russian">Независимая среда обитания, лифт на второй этаж, пандусы, туалеты, ванные комнаты, жилые помещения, приспособленные для людей на колясках – наш вклад в ваш отдых и жизнь
-                    без границ.</span>
-                    </p>
-                    <p class="lead"><span class="french">Habitat indépendant, ascenseur jusqu'au deuxième étage, rampes, toilettes, salles de bains, des espaces de vie, adapté pour les personnes en fauteuil roulant - notre contribution à vos vacances et une vie sans limites.</span>
+                    <h2 class="section-heading">Доступная среда</h2>
+                    <p class="lead"> Независимая среда обитания,
+                    лифт на второй этаж, пандусы, туалеты, ванные комнаты, жилые помещения, приспособленные для людей на колясках – наш вклад в ваш отдых и жизнь
+                    без границ.
                     </p>
                 </div>
             </div>
@@ -456,42 +391,21 @@
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="list-inline">
-                        <span class="russian">
-                            <li>
-                                <a href="#">Центр</a>
-                            </li>
-                            <li class="footer-menu-divider">&sdot;</li>
-                            <li>
-                                <a href="#rest">Место</a>
-                            </li>
-                            <li class="footer-menu-divider">&sdot;</li>
-                            <li>
-                                <a href="#environment">Среда</a>
-                            </li>
-                            <li class="footer-menu-divider">&sdot;</li>
-                            <li>
-                                <a href="#rooms">Номера</a>
-                            </li>
-                        </span>
-                    </ul>
-                    <ul class="list-inline">
-                        <span class="french">
-                            <li>
-                                <a href="#">Centre</a>
-                            </li>
-                            <li class="footer-menu-divider">&sdot;</li>
-                            <li>
-                                <a href="#rest">Lieu</a>
-                            </li>
-                            <li class="footer-menu-divider">&sdot;</li>
-                            <li>
-                                <a href="#environment">Accessibilité</a>
-                            </li>
-                            <li class="footer-menu-divider">&sdot;</li>
-                            <li>
-                                <a href="#rooms">Chambres</a>
-                            </li>
-                        </span>
+                        <li>
+                            <a href="#">Центр</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a href="#rest">Место</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a href="#environment">Среда</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a href="#rooms">Номера</a>
+                        </li>
                     </ul>
                     <p class="copyright text-muted small">Copyright &copy; LaVidaSinLimites 2014. All Rights Reserved</p>
                 </div>
