change main pic

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                         <h1>Жизнь без границ</h1>
                         <h3>La vida sin limites</h3>
                         <hr class="intro-divider">
-                        <h2 style="color:#EE3A39">ОТКРЫТИЕ В МАЕ</h2>
+                        <h2 style="color:#EE3A39">МЫ ОТКРЫЛИСЬ</h2>
                     </div>
                 </div>
             </div>
